Fixes Fixed duplicate word submissions by updating word. Fixed word-wrapping styling issue

--- a/styles/style.css
+++ b/styles/style.css
@@ -41,6 +41,19 @@ h5 {
     background-color: whitesmoke;
     -webkit-box-shadow: 0 10px 15px 0 #949494;
     box-shadow: 0 10px 15px 0 #949494;
+    /* These are technically the same, but use both */
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    -ms-word-break: break-all;
+    /* This is the dangerous one in WebKit, as it breaks things wherever */
+    word-break: break-all;
+    /* Instead use this non-standard one: */
+    word-break: break-word;
+    /* Adds a hyphen where the word breaks, if supported (No Blink) */
+    -ms-hyphens: auto;
+    -moz-hyphens: auto;
+    -webkit-hyphens: auto;
+    hyphens: auto;
 }
 
 .entry:hover {
